--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 
 # testing
 /coverage
-
+/idea
 # production
 /build
 
@@ -21,3 +21,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.idea/
+package-lock.json
